Corrected an overflow

--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,6 @@ body{
 
 @media (max-width:540px){
   *{
-    overflow-x: visible;
+    overflow-x: hidden;
   }
 }
